# apertium-urd-hin

./: .gitattributes  AUTHORS  Makefile  Makefile.am  README  apertium-ur-hi.hi-ur.t1x  apertium-ur-hi.hi.dix  apertium-ur-hi.hi.dix~  apertium-ur-hi.ur-hi.dix  apertium-ur-hi.ur-hi.t1x  apertium-ur-hi.ur.dix  apertium-urd-hin.urd-hin.dix  apertium-urd-hin.urd-hin.t1x  configure.ac  modes.xml  pending-tests.sh  ur-hi.mode
dev/: en-hi-ur.list  hi.txt  ur.txt  urdu-hindi.proofread.txt  urdu-hindi.txt  wikt-nouns.sh
dev/archive/: apertium-urd-hin.urd.dix
dev/bidix/: ur-hi.nouns.00  ur-hi.nouns.01  ur-hi.nouns.02  ur-hi.nouns.03  ur-hi.nouns.04  ur-hi.nouns.05  ur-hi.nouns.06  ur-hi.nouns.07  ur-hi.nouns.08  ur-hi.nouns.09  ur-hi.nouns.10  ur-hi.nouns.11  ur-hi.nouns.12  ur-hi.nouns.13  ur-hi.nouns.14
dev/conversion/: adj.chopped.dix  hi.dix  nouns.chopped.dix
dev/testvoc/: inconsistency-summary.sh  inconsistency.sh  testvoc-summary.hin-urd.txt  testvoc-summary.urd-hin.txt  testvoc.sh
modes/: ur-hi-morph.mode  ur-hi-tagger.mode  ur-hi-transfer.mode  ur-hi.mode
test/: tests.json  urd-hin-pending-chunker-expected.txt  urd-hin-pending-generator-expected.txt  urd-hin-pending-generator-gold.txt  urd-hin-pending-input.txt  urd-hin-pending-morph-expected.txt  urd-hin-pending-tagger-expected.txt
texts/: story_new.urd.txt  story_new_orig.hin.txt  story_new_translated.hin.txt
texts/evaluation_texts/hin-urd/: hin.org.txt  hin.ref.txt  hin.trans.txt
texts/evaluation_texts/urd-hin/: urd.org.txt  urd.ref.txt  urd.trans.txt
